--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "*.vue": "eslint --ext .vue"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.1",
     "@nuxtjs/dotenv": "^1.1.0",
     "@nuxtjs/pwa": "^2.0.5",
-    "axios": "^0.17.1",
     "buefy": "^0.6.2",
     "bulma-steps": "^0.1.9",
     "bulma-switch": "^0.1.2",
