--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "vuexfire": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.0.0-beta.38",
+    "@babel/polyfill": "^7.0.0-beta.40",
     "babel-eslint": "^8.2.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
