--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
     "eslint-config-standard": "^11.0.0-beta.0",
