--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
     "eslint-config-standard": "^11.0.0-beta.0",
@@ -69,6 +68,7 @@
     "mwangaben-vthelpers": "^1.1.3",
     "pre-commit": "^1.2.2",
     "stylus-loader": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.0",
     "vue-jest": "^1.4.0",
     "vue-test-utils": "^1.0.0-beta.11"
   },
