--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,17 +23,20 @@ jobs:
             chmod +x ./cc-test-reporter
       - run:
           name: JavaScript Linter
-          command: yarn lint -f ./node_modules/eslint-junit/index.js
+          command: |
+            cd src
+            yarn lint -f ./node_modules/eslint-junit/index.js
           environment:
-            ESLINT_JUNIT_OUTPUT: "coverage/junit/js-eslint-results.xml"
+            ESLINT_JUNIT_OUTPUT: "src/coverage/junit/js-eslint-results.xml"
       - run:
           name: Unit tests with coverage
           command: |
             ./cc-test-reporter before-build
+            cd src
             yarn test --coverage --ci --testResultsProcessor="./node_modules/jest-junit"
             ./cc-test-reporter after-build --exit-code $?
           environment:
-            JEST_JUNIT_OUTPUT: "coverage/junit/js-test-results.xml"
+            JEST_JUNIT_OUTPUT: "src/coverage/junit/js-test-results.xml"
       - store_test_results:
           path: coverage/junit
       - store_artifacts:
@@ -46,13 +49,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install now globally with yarn
-          command: yarn global add now
+          name: Install firebase-tools globally with yarn
+          command: yarn global add firebase-tools
       - run:
           name: Deploy if tests pass and branch is Master
           command: |
             export PATH="$PATH:$HOME/.config/yarn/global/node_modules/.bin"
-             now --force --no-clipboard --public --token ${NOW_TOKEN} && now alias buefy-shop --token ${NOW_TOKEN} --force
+            firebase use default
+            firebase deploy --token=$FIREBASE_TOKEN --non-interactive
 
   deploy-dev:
     docker:
@@ -61,13 +65,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install now globally with yarn
-          command: yarn global add now
+          name: Install firebase-tools globally with yarn
+          command: yarn global add firebase-tools
       - run:
           name: Deploy if tests pass and branch start with dev-
           command: |
             export PATH="$PATH:$HOME/.config/yarn/global/node_modules/.bin"
-            now --force --no-clipboard --public --token ${NOW_TOKEN} && now alias buefy-shop-dev --token ${NOW_TOKEN} --force
+            firebase use staging
+            firebase deploy --token=$FIREBASE_TOKEN --non-interactive
 
 workflows:
   version: 2
