--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ jobs:
       - run:
           name: Setup Code Climate test reporter
           command: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod +x ./cc-test-reporter
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./src/cc-test-reporter
+            chmod +x ./src/cc-test-reporter
       - run:
           name: JavaScript Linter
           command: |
@@ -31,17 +31,16 @@ jobs:
       - run:
           name: Unit tests with coverage
           command: |
-            ./cc-test-reporter before-build
             cd src
+            ./cc-test-reporter before-build
             yarn test --coverage --ci --testResultsProcessor="./node_modules/jest-junit"
-            cd ..
             ./cc-test-reporter after-build --exit-code $?
           environment:
             JEST_JUNIT_OUTPUT: "src/coverage/junit/js-test-results.xml"
       - store_test_results:
-          path: coverage/junit
+          path: src/coverage/junit
       - store_artifacts:
-          path: coverage/junit
+          path: src/coverage/junit
 
   deploy:
     docker:
