--- a/prod/server/package.json
+++ b/prod/server/package.json
@@ -11,12 +11,7 @@
     "express": "^4.15.4",
     "firebase-admin": "^5.0.1",
     "firebase-functions": "^0.6.1",
-    "lodash": "^4.17.4",
-    "nuxt": "1.0.0-rc11",
-    "vue": "~2.4.2",
-    "vue-meta": "^1.2.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.0"
+    "nuxt": "^1.3.0"
   },
   "private": true
 }
